# finance-rag-search

./: .gitignore  README.md  pyproject.toml
artifacts/minigpt_finance/: model.pt  tokenizer.json  training_metrics.json
data/: finance_seed_corpus.txt
docs/: architecture.md
examples/: local_demo.py
scripts/: train_minigpt.py
src/graphrag_pipeline/: __init__.py  config.py  demo_data.py  domain.py  entities.py  ingestion.py  pipeline.py  storage.py  tokenizer.py  transformer.py  vectorization.py
src/graphrag_pipeline/interface/: __init__.py  api.py  cli.py  prompt_templates.py  schemas.py  service.py
src/graphrag_pipeline/schema/: postgres_apache_age.sql
tests/: test_interface.py  test_pipeline_smoke.py
