[project]
name = "graphrag-pipeline"
version = "0.1.0"
description = "End-to-end GraphRAG pipeline for real-time financial news with a custom PyTorch Transformer."
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12.0",
  "numpy>=2.0.0",
  "torch>=2.2.0",
]

[project.optional-dependencies]
api = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "uvicorn>=0.30.0",
]
dev = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "pytest>=8.0.0",
  "ruff>=0.4.0",
  "uvicorn>=0.30.0",
]

[project.scripts]
graphrag = "graphrag_pipeline.interface.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
